# NhuY_F1TENTH

ros_basic/: CMakeLists.txt  package.xml
ros_basic/config/: robot.yaml
ros_basic/launch/: start.launch.py
ros_basic/learning_ros/: move_robot.py  move_robot_client.py  move_robot_server.py  publisher.py  simple_server.py  sub_drone.py  subscriber.py
ros_basic/log/: latest_build
ros_basic/tf/: aeb.py  dynamic.py  safety.py  static.py  visual.py  visual_danger.py
ros_basic/tf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_basic/tf/log/: latest_build
rosbasic_msgs/: CMakeLists.txt  package.xml
rosbasic_msgs/srv/: BaiTap.srv  GetTransform.srv
