cmake_minimum_required(VERSION 3.8)
project(rosbasic_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package (ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/AddTwoInts.srv"
  "srv/BaiTap.srv"
  "srv/GetTransform.srv"

  DEPENDENCIES geometry_msgs builtin_interfaces
  
)

ament_package()
